fixed 20px shift to he righ ton the background of the photo img textbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ footer{
     height: auto;
     background-color: #4aaaa5;
     color: #ffffff;
-    left: 40px;
+    left: 20px;
     top: 130px;
 }
 
